--- a/docs/30_problems/30_data_organisation.mdx
+++ b/docs/30_problems/30_data_organisation.mdx
@@ -21,29 +21,33 @@ Central requirements are the definition of [formal responsibilities, organisatio
 
 ### Formal responsibilities and organisational conventions
 
-To make a long story short: It's mainly about describing how and who will work with documents. And first steps could be about:
-- Document the responsibilities of primary researchers and project staff.
-- Create user roles: Define detailed rights for users / groups / roles to access data and sensitive information.
-- Describe processes of quality assurance including protected storage, sharing, and accessibility in the short term and on the long run.
+To make a long story short: It's mainly about describing who will and how to work with documents. First steps could be about:
+- Documenting the responsibilities of primary researchers and project staff.
+- Creating user roles: Define detailed rights for users / groups / roles to access data and sensitive information.
+- Describing processes of quality assurance including protected storage, sharing, and accessibility in the short term and on the long run.
 - Data processing: How, where, how fast. Describe input and output data. Decide how you will name and structure files and folders.
 
-The result should be descriptive documents which files in the course of the daily work routines, on which status (for example original file, temporary work file; Draft, intermediate version, final version), where (workstation PC, central file server, Database) and for how long (temporarily, project duration, long-term availability) in which format are saved.
+The result should be descriptive documents that unambiguously define for files which are used in the course of the daily work routines:
+- on which status (for example original file, temporary work file; Draft, intermediate version, final version),
+- where (workstation PC, central file server, Database), 
+- for how long (temporarily, project duration, long-term availability),
+- and in which format they are saved.
 
 <img alt="small data handout" src='/docs/30_problems/img/en_data_handout.png' width="600" align="center" vspace="10" hspace="10" />
 
 
 ### Technical implementations
 
-Get an overview of the occurring data and document flows. A short description, easy to understand for every user, should be accessible on low level and explain the main concepts. The data itself needs to have a bulletproof [Data Documentation](/docs/problems/data_documentation) including [Metadata](/docs/topics/metadata/) and suitable [Data Format Standards](/docs/topics/format_standards/). Find out more about the usual [Best Practice](/docs/topics/best_practice/) at your institute or within your discipline. Plan how documents can be shared between project staff and what needs to be accessed for [Data Publication](/docs/problems/data_publication/) with [PID](/docs/topics/pid/).
+Get an overview of the occurring data and document flows. A short description, easy to understand for every user, should be accessible on a low level and explain the main concepts. The data itself needs to have a bulletproof [Data Documentation](/docs/problems/data_documentation) including [Metadata](/docs/topics/metadata/) and suitable [Data Format Standards](/docs/topics/format_standards/). Find out more about the usual [Best Practice](/docs/topics/best_practice/) at your institute or within your discipline. Plan how documents can be shared between project staff and what needs to be accessed for [Data Publication](/docs/problems/data_publication/) with [PID](/docs/topics/pid/).
 
-Data security affects all technical and organisational issues to protect the data from alteration, loss, and Destruction. In this context, storage methods, backup procedures, necessary physical resources as well as automated and administrative routines must be planned. Ask local contacts or external experts about already established technologies for [Data Storage and Archiving](/docs/problems/data_storage) as well as suitable [Repositories](/docs/topics/repositories/).
+Data security affects all technical and organisational issues to protect the data from alteration, loss, and Destruction. In this context, storage methods, backup procedures, necessary physical resources as well as automated and administrative routines must be planned and put in place. Ask local contacts or external experts about already established technologies for [Data Storage and Archiving](/docs/problems/data_storage) as well as suitable [Repositories](/docs/topics/repositories/).
 
 
 ## Synopsis
 
 <img alt="small data handout" src='/docs/30_problems/img/en_data_orgsteps.png' width="400" align="right" vspace="10" hspace="10" />
 
-Don't rush one's fences and take small steps first - The organisation of research data is primarily an organisational problem that is accompanied and supported by technological measures:
+Good data organisation does not happen over night - take small steps first. The organisation of research data is primarily an organisational problem that is accompanied and supported by technological measures:
 - Record of status quo:
     - Which organisational processes have been used so far and which technologies support them?
     - What are the regulatory boundaries and technical limits?
