--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -3,7 +3,7 @@ title: "FAIR Data Principles"
 ---
 # FAIR Data Principles
 
-<img alt="FAIR Data" src='/static/img/FAIR_data_principles.jpg'>
+![FAIR Data](/img/FAIR_data_principles.jpg)
 
 Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0)
 
