fix: misc. image issues

--- a/docs/30_problems/30_data_organisation.mdx
+++ b/docs/30_problems/30_data_organisation.mdx
@@ -2,6 +2,8 @@
 title: "Data Organisation"
 ---
 
+import useBaseUrl from '@docusaurus/useBaseUrl';
+
 :::info summary quote:
 > Simply making your data „open“ does not make your data usable. Usability is the result of other people being able to make sense of your data: the quality of your filenames, your folder structure and your documentation greatly contribute to the level of reusability of your data. It is neither difficult nor time-consuming to maintain your data in a way that invites other researchers to investigate and explore.
 
@@ -10,7 +12,7 @@ _Andreas von der Dunk, Technische Universität Dresden, Service Center Research 
 
 ## General basics
 
-<img alt="data for future generations" src='/docs/30_problems/img/data_1517.png' width="250" align="right" vspace="10" hspace="10" />
+<img alt="data for future generations" src={useBaseUrl('/img/problems/data_1517.png')} width="250" align="right" vspace="10" hspace="10" />
 
 A clean and comprehensible organisation of data and documents are an important part of good scientific practice and an important step to realise research data management according to the [FAIR data principles](/docs/topics/fair). 
 
@@ -33,7 +35,7 @@ The result should be descriptive documents that unambiguously define for files w
 - for how long (temporarily, project duration, long-term availability),
 - and in which format they are saved.
 
-<img alt="small data handout" src='/docs/30_problems/img/en_data_handout.png' width="600" align="center" vspace="10" hspace="10" />
+<img alt="small data handout" src={useBaseUrl('/img/problems/en_data_handout.png')} width="600" align="center" vspace="10" hspace="10" />
 
 
 ### Technical implementations
@@ -45,7 +47,7 @@ Data security affects all technical and organisational issues to protect the dat
 
 ## Synopsis
 
-<img alt="small data handout" src='/docs/30_problems/img/en_data_orgsteps.png' width="400" align="right" vspace="10" hspace="10" />
+<img alt="small data handout" src={useBaseUrl('/img/problems/en_data_orgsteps.png')} width="400" align="right" vspace="10" hspace="10" />
 
 Good data organisation does not happen over night - take small steps first. The organisation of research data is primarily an organisational problem that is accompanied and supported by technological measures:
 - Record of status quo:
