--- a/docs/30_problems/30_data_organisation.mdx
+++ b/docs/30_problems/30_data_organisation.mdx
@@ -40,7 +40,7 @@ The result should be descriptive documents that unambiguously define for files w
 
 ### Technical implementations
 
-Get an overview of the occurring data and document flows. A short description, easy to understand for every user, should be accessible on a low level and explain the main concepts. The data itself needs to have a bulletproof [Data Documentation](/docs/problems/data_documentation) including [Metadata](/docs/topics/metadata/) and suitable [Data Format Standards](/docs/topics/format_standards/). Find out more about the usual [Best Practice](/docs/topics/best_practice/) at your institute or within your discipline. Plan how documents can be shared between project staff and what needs to be accessed for [Data Publication](/docs/problems/data_publication/) with [PID](/docs/topics/pid/).
+Get an overview of the occurring data and document flows. A short description, easy to understand for every user, should be accessible on a low level and explain the main concepts. The data itself needs to have a bulletproof Data Documentation including [Metadata](/docs/topics/metadata/) and suitable [Data Format Standards](/docs/topics/format_standards/). Find out more about the usual [Best Practice](/docs/topics/best_practice/) at your institute or within your discipline. Plan how documents can be shared between project staff and what needs to be accessed for [Data Publication](/docs/problems/data_publication/) with [PID](/docs/topics/pid/).
 
 Data security affects all technical and organisational issues to protect the data from alteration, loss, and Destruction. In this context, storage methods, backup procedures, necessary physical resources as well as automated and administrative routines must be planned and put in place. Ask local contacts or external experts about already established technologies for [Data Storage and Archiving](/docs/problems/data_storage) as well as suitable [Repositories](/docs/topics/repositories/).
 
