fix: minor edit

--- a/docs/40_topics/100_pid.mdx
+++ b/docs/40_topics/100_pid.mdx
@@ -2,9 +2,9 @@
 title: "PID"
 ---
 
-import useBaseUrl from '@docusaurus/useBaseUrl';
-
 # Persistent Identifiers (PID)
+
+import useBaseUrl from '@docusaurus/useBaseUrl';
 
 Persistent identifiers (PIDs) are unique, long-lasting references to identified sources, such as publications, datasets or persons and allow to reliably locate, identify and verify the references.<sup>[1](https://doi.org/10.5334/dsj-2017-009),[2](https://doi.org/10.2218/ijdc.v8i1.246),[3](https://doi.org/10.1007/s12145-011-0083-6)</sup> 
 
@@ -37,7 +37,7 @@ ORCID iDs are open and non-proprietary PIDs for authors also described as unique
 
 An ORCID iD is a 16-digit alphanumerical code to unambiguously identify authors, while author names might not be unique, may change or have different ordering conventions depending on cultural differences.<sup>[15](https://support.orcid.org/hc/en-us/articles/360006897674-Structure-of-the-ORCID-Identifier)</sup> 
 
-ORCID iDs can be depicted as an URL, e.g. `https://orcid.org/0000-0000-0000-0000` but are also typically depicted without the resolver as an URN, e.g.ORCID:0000-0000-0000-0000.
+ORCID iDs can be depicted as an URL, e.g. `https://orcid.org/0000-0000-0000-0000` but are also typically depicted without the resolver as an URN, e.g. `ORCID:0000-0000-0000-0000`.
 
 ORCID iDs are a subset of International Standards Name Identifiers (ISNI) provided by the International Organisation for Standardisation (ISO) as ISO 27729.<sup>[16](https://doi.org/10.1038/462825a)</sup>
 
