--- a/docs/10_domains/70_computational_chemistry.mdx
+++ b/docs/10_domains/70_computational_chemistry.mdx
@@ -17,7 +17,9 @@ Define structure, charge, spin state, level of theory, basis sets (and many more
 
 ## Summary:
 
+Computational chemistry is the domain of chemistry concerned with modeling and investigating molecular systems *in silico*. These systems can be modeled on a first principles basis using quantum mechanical (QM) methods, by using various approximations such as e.g. Newtonian molecular mechanics (MM) methods or by known empirical relationships between molecular structure and chemical properties defining quantitative structure property relationships (QSPR).
 
+In a typical workflow, first the appropriate methods and necessary input data are identified. Then, the required calculations are carried out and finally the resulting output data is analyzed. Metadata are collected for input and output data of each calculation. The results can be compared with other computational results and experiments to determine their accuracy, or used to explain experimental results and guide workflows in other domains of chemistry.
 
 
 ## Data producing methods:
