Intro page with single buttons

--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -1,19 +1,67 @@
 ---
 title: "Introduction"
 ---
+import {RoleButton,DomainButton,ProblemButton,TopicButton} from "/src/components/HomepageFeatures.js"
 
-import {RoleButton,DomainButton} from "/src/components/HomepageFeatures.js"
+The NFDI4Chem knowledge base provides information and recommendations for digitising all key steps in chemical research to support scientists in their efforts to collect, store, process, analyse, disclose, and reuse research data. Actions to promote Open Science and Research Data Management in accordance with the FAIR data principles are presented by everyday users and range from planning and implementation to publication and re-use.<sup>[1](https://riojournal.com/article/55852/)</sup>
 
-The NFDI4Chem knowledge base provides information and recommendations for digitising all key steps in chemical research to support scientists in their efforts to collect, store, process, analyze, disclose and reuse research data. Actions to promote Open Science and Research Data Management (RDM) in accordance with the FAIR Data principles are presented by everyday users and address everything from planning and implementation to publication and re-use.
+![LifeCycle](/img/Intro/LifeCycle.png)
 
-![linkedin](/img/linkedin.png)
+## Why is RDM important for chemistry?
 
-<RoleButton />
+:::danger Notice:                                
+Research Data Management in chemistry is currently not systematically organised and individual solutions of single institutions lead to low visibility, accessibility, and usability of research results. The added value of preserving and researching scientific data in chemistry is particularly high because the significance of the data is often immortal and older data can also be used for current investigations. In most cases, it is even mandatory to access older data, since experimental data or complex simulation data in particular can only be generated with great effort. A loss of previously acquired data can be an irretrievable loss of knowledge.<sup>[1](https://riojournal.com/article/55852/)</sup>
+:::
 
-Blabla
+- prevention of data loss and data security
+- verifiability, transparency and reproducibility
+- faster retrieval of data and information
+- saving time and resources
+- long-term availability of research data 
+- data re-use in new research projects
+
+## Navigation through knowledge base
+
+:::info Guidance for getting started:
+The knowledge base offers different points of entry that help you in navigating the site and simplify the targeted search for information. Start learning more about RDM by selecting a domain or role, viewing the topics and concepts, or finding solutions for common problems.
+:::
+
+
+### Domain-specific information
+
+The domain pages present an exemplary workflow for different chemistry disciplines along the research data life cycle. Multiple domains are illustrated in a user profile. Guidelines are provided for all digitisation steps involved and domain-specific best practices for FAIR data are given. Find out how to apply good RDM and FAIR science in the context of your own specific discipline.
 
 <DomainButton />
 
+### Role-specific information
+
+The role pages focus on the motivation for role-specific requirements and answer the questions why RDM is important and how it can be implemented. Get a fast impression of all important RDM information related to your role.
+
+<RoleButton />
+
+### Problems
+
+The problems section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Data storage and archiving and data publication are also covered. Find a detailed description of the following aspects:
+
+- general basics
+- formal responsibilities and organisational conventions
+- technical implementations
+- further information and reading 
+
+<ProblemButton />
+
+### Topics & Concepts
+
+These pages contain general information on concrete RDM topics and concepts explained in a chemical context. The articles do not just illustrate a subject, but relate it to important other topics and concepts.Check out the articles and learn more about the implementation of good RDM and FAIR science. Gain deeper insights into the following aspects:
+
+- general basics and principles
+- application and implementation
+- presentation of one or more suitable chemistry-specific examples
+- further information and reading 
+
+<TopicButton />
 
 
-...
+:::info Info: 
+NFDI4Chem offers regular RDM workshops. For more information, please visit the NFDI4Chem website.
+:::
