--- a/docs/20_role/30_student.mdx
+++ b/docs/20_role/30_student.mdx
@@ -27,7 +27,7 @@ The use of **[well-organised](/docs/problems/data_organisation)** and **[documen
 For the **[documentation of these data](/docs/problems/data_documentation)**, a classic paper-based lab journal or an **[electronic lab journal](/docs/topics/eln)** (ELN) can be used.
 :::
 
-:::tip Considerations:              
+:::caution Considerations:              
 The use of a paper-based lab journal seems to be an easy and efficient way to **[document data](/docs/problems/data_documentation)**. But the use of an **[ELN](/docs/topics/eln)** like **[Chemotion](https://www.chemotion.net/chemotionsaurus/index.html)** has plenty of advantages in the long run. For example, in **[Chemotion](https://www.chemotion.net/chemotionsaurus/index.html)** all data obtained from an experiment can be linked to your protocol, which is an easy way to have a **[well-organised research data set](/docs/problems/data_organisation)** at the end of the thesis. Additionally, the reaction protocol can be exported in a **[standardised form](/docs/topics/format_standards)**, which is suitable for **[publication](/docs/problems/data_publication)** in the experimental section of a thesis or a paper. <br/> Furthermore, the data are machine readable and therefore easily findable which is one aspect for **[FAIR data](/docs/topics/fair)** (**F**indable, **A**ccessible, **I**nteroperable, **R**eusable). Also the other aspects should be fulfilled, this increases the machine-actionability for future use of the data. Another advantage of an **[ELN](/docs/topics/eln)** is that it can be coupled with a **[repositorium](/docs/topics/repositories)**, which will ease the **[publication process](/docs/problems/data_publication)**.
 :::
 
