--- a/docs/20_role/00_guide.mdx
+++ b/docs/20_role/00_guide.mdx
@@ -4,6 +4,16 @@ title: "Guide"
 
 import RoleFeatures from '/src/components/RoleFeatures.js';
 
-Looking for information on managing research data in chemistry? Choose your role and find solutions for role-specific data management problems.
+Looking for information on managing research data in chemistry? Choose your role and find solutions for role-specific data management issues.
+
+:::info Info:
+The role pages provide an overview of the individual RDM steps. The following topics are presented in detail:
+
+- motivation
+- how to start
+- what RDM aspects are particularly relevant to your role
+:::
+
+Click on a button below to get started with your role.
 
 <RoleFeatures />
