--- a/docs/40_topics/100_pid.mdx
+++ b/docs/40_topics/100_pid.mdx
@@ -14,14 +14,14 @@ The main benefits of PIDs for chemistry researchers are increased findability, v
 
 ## DOIs
 
-<img align="left" src={useBaseUrl('/img/topics/DOI_logo.svg')} width="80" alt="DOI logo" vspace="10" hspace="10" />
+<img align="left" src={useBaseUrl('/img/topics/DOI_logo.svg')} width="80" alt="DOI logo" vspace="10" hspace="0" />
 
 Digital Object Identifiers are open and non-proprietary PIDs for objects such as  publications and datasets but also physical objects which are assigned by members of the International DOI Foundation.<sup>[8](https://doi.org/10.1081/E-ELIS3-120044418),[9](https://doi.org/10.2481/dsj.4.12)</sup> Most well-recognised DOI registration agencies include CrossRef for publications and DataCite focusing on datasets.<sup>[10](https://doi.org/10.1109/COINFO.2009.66)</sup> 
 
 A DOI consists of a character string divided in to two parts by a slash. The prefix identifies the registrant, who retrieves a DOI from a DOI registration agency and always starts with “10.”. Every registrant has its own unique prefix. The suffix identifies a specific object registered by a registrant via a registration agency. DOIs are most frequently displayed as an URL like `https://doi.org/10.1000/182` including a resolver as HTTP proxy server to redirect to the linked object.<sup>[11](https://doi.org/10.1081/E-ELIS3-120044418)</sup> DOIs are standardised by the International Organisation for Standardisation (ISO) in ISO 26324.<sup>[12](https://www.iso.org/standard/43506.html)</sup>
 
-<img src={useBaseUrl("/img/topics/crossref-logo-landscape-200.svg")} width="200" alt="Crossref logo" />
-<img src={useBaseUrl("/img/topics/datacite.svg")} class="align-center" width="200" alt="DataCite logo" />
+<img align="center" src={useBaseUrl("/img/topics/crossref-logo-landscape-200.svg")} width="200" alt="Crossref logo" />
+<img align="center" src={useBaseUrl("/img/topics/datacite.svg")} class="align-center" width="200" alt="DataCite logo" />
 
 Registrants are liable to update the URL connected to the DOI if the object is moved, which is enabled by metadata attached to the DOI during registration.<sup>[13](https://support.datacite.org/docs/doi-registration-policy)</sup>
 
