--- a/docs/40_topics/100_pid.mdx
+++ b/docs/40_topics/100_pid.mdx
@@ -2,7 +2,7 @@
 title: "PID"
 ---
 
-# Persistent Identifiers (PID)
+# Persistent Identifiers (PIDs)
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
