--- a/docs/20_role/30_student.mdx
+++ b/docs/20_role/30_student.mdx
@@ -20,7 +20,7 @@ If you want to learn more about domain-specific data production methods, you can
 ## Data documentation:
 
 :::danger Why:       
-The use of [well-organised](/docs/problems/data_organisation) and documented data](/docs/problems/data_documentation) plays an important role in finding, searching, and using research data throughout the [data life cycle](/docs/topics/data_life_cycle).
+The use of [well-organised](/docs/problems/data_organisation) and [documented data](/docs/problems/data_documentation) plays an important role in finding, searching, and using research data throughout the [data life cycle](/docs/topics/data_life_cycle).
 :::
 
 :::info How:         
