--- a/docs/20_role/30_student.mdx
+++ b/docs/20_role/30_student.mdx
@@ -50,7 +50,7 @@ By [documenting](/docs/problems/data_documentation) and processing data in the s
 ## Sharing, preserving and re-using data:
 
 :::danger Why:      
-Collaboration is easier if well-organised data](/docs/problems/data_organisation)** is accessible. To conduct further research previous research can be reviewed and already existing data is reusable.
+Collaboration is easier if [well-organised data](/docs/problems/data_organisation) is accessible. To conduct further research previous research can be reviewed and already existing data is reusable.
 :::
 
 :::info How:          
