--- a/docs/40_topics/01_fair.mdx
+++ b/docs/40_topics/01_fair.mdx
@@ -9,7 +9,7 @@ Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/lice
 
 ## Introduction
 
-The [FAIR Data Principles](https://doi.org/10.1038/sdata.2016.1) were published after being defined at the [Lorentz Workshop](https://www.lorentzcenter.nl/) in 2014.
+The [FAIR Data Principles](http://doi.org/10.1038/sdata.2016.18) were published after being defined at the [Lorentz Workshop](https://www.lorentzcenter.nl/) in 2014.
 These principles serve as guidelines to both those who publish data, e.g. researchers, as well as those who preserve data, e.g. [repository](20_repositories.mdx) or archive service providers. This is an important distinction, highlighting that a researcher’s data can only be as FAIR as the infrastructure and services available to them.
 
 Keeping in mind the long-term goal of making scientific data reusable to others by creating systematic order in the ever-growing mound of data arising from research, the FAIR Data Principles place a strong focus on machine-readable (meta)data. While humans must be able to find and understand the published datasets as well, computers will be tasked with sifting through large amounts of data and determining what datasets are relevant to the intended purpose and how they can be reused. To this end, not only is it important that humans are able to understand and find the data but, more importantly, machines need to be able to search through available datasets and determine which ones are of use for the intended purpose.
